# Python-Basic-Homeworks

./: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt
for check_testing/: db_helper.py  solver.py  test_db_helper.py  test_solver.py
homework_01/: main.py
homework_02/: README.md  base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  Pipfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py  requirements.txt
homework_05/templates/: base.html  description.html  index.html
homework_06/: app.py  config.py  main.py  views.py
homework_06/migrations/versions/: e5a8067872e1_create_services_table.py
homework_06/models/: __init__.py  database.py  services.py
homework_06/templates/: base.html  index.html  items.html  services_add.html
homework_07/growinghappy/: manage.py
homework_07/growinghappy/growinghappy/: asgi.py  settings.py  urls.py  wsgi.py
homework_07/growinghappy/services/: models.py  views.py
homework_07/growinghappy/services/templates/services/: service_list.html
homework_07/growinghappy/templates/: root.html
homework_10/growinghappy/services/: apps.py  models.py  test_views.py  tests.py  views.py
homework_10/growinghappy/services/management/commands/: fill_db.py
homework_10/growinghappy/services/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_category_name.py
